# flyer-layout-generator

./: .air.toml  .dockerignore  .env.example  .gitignore  .pylintrc  .sqllsrc.json  .tool-versions  Dockerfile  FRONTEND.md  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  package.json  postcss.config.js  pyproject.toml  requirements.txt  sqlc.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
api/: advertisers.go  assets.go  clients.go  components.go  controller.go  design.go  designfiles.go  iam.go  images.go  layout.go  module.go  photoshop.go  projects.go  template.go
app/: __main__.py  background_position.py  build_image.py  config.py  db.py  distortion.py  drawer.py  find_component_per_region.py  generate_designs.py  logger.py  main.py  models.py  position_components.py  process_photoshop_file.py  requests.py  upload_image.py
assets/: index.html
database/: adaptation_batch.sql.go  advertisers.sql.go  clients.sql.go  companies_api_credentials.sql.go  components.sql.go  design.sql.go  layout.sql.go  layout_job.sql.go  models.go  photoshop.sql.go  projects.sql.go  renderer.sql.go  request.sql.go  templates.sql.go
docs/: ARCHITECTURE.md  algo.uml  research.md  templates.csv
infra/: config.go  database.go  logger.go  photoshop.go  server.go  storage.go
migrations/: env.py
scripts/: .env.test  .~lock.templates.csv#  Caddyfile  Dockerfile.app.yml  ai.service  caddy-setup.sh  docker-compose.dev.yaml  docker-compose.logs.yaml  server-setup.sh  server.service  systemd-setup.sh
shared/: controller.go
ui/: package.json  tailwind.config.js  (+1 more)
(+1150 files in other folders)
